--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -2,8 +2,7 @@
 # see https://alacritty.org/config-alacritty.html
 
 ## GENERAL
-[shell]
-program = "/bin/sh"
+shell = "/bin/bash"
 
 working_directory = "None"  # Default value
 live_config_reload = true   # Default value
