--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,37 +1,90 @@
 
 # see https://alacritty.org/config-alacritty.html
 
-## GENERAL
-shell = "/bin/bash"
-
-working_directory = "None"          # Default value
-live_config_reload = true           # Default value
-ipc_socket = true                   # Default value
-
-## WINDOW
 [window]
-dimensions = {columns = 0, lines = 0  } # Default value
 padding = {x= 10, y= 10}            # Default value
-dynamic_padding = false             # Default value
-decorations = "None"
 opacity = 0.7
-blur = false                        # Default value
-startup_mode = "Windowed"           # Default value
-title= "Alacritty"                  # Default value
-dynamic_title = false               # Default value
-decorations_theme_variant = "None"  # Default value
-resize_increments = false           # Default value
-option_as_alt = "None"              # Default value
-
-[scrolling]
-history = 10000                     # Default value
-multiplier = 3                      # Default value
 
 [font]
 normal = { family = "monospace", style = "Regular" }
 bold =  { family = "monospace", style = "Bold" }
 italic = { family = "monospace", style = "Italic" }
 bold_italic = { family = "monospace", style = "Bold Italic" }
-offset = { x =0, y= 0}              # Default value
 size = 12.0
+
+[colors.primary]
+background = "#24273a"
+foreground = "#cad3f5"
+dim_foreground = "#8087a2"
+bright_foreground = "#cad3f5"
+
+[colors.cursor]
+text = "#24273a"
+cursor = "#f4dbd6"
+
+[colors.vi_mode_cursor]
+text = "#24273a"
+cursor = "#b7bdf8"
+
+[colors.search.matches]
+foreground = "#24273a"
+background = "#a5adcb"
+
+[colors.search.focused_match]
+foreground = "#24273a"
+background = "#a6da95"
+
+[colors.footer_bar]
+foreground = "#24273a"
+background = "#a5adcb"
+
+[colors.hints.start]
+foreground = "#24273a"
+background = "#eed49f"
+
+[colors.hints.end]
+foreground = "#24273a"
+background = "#a5adcb"
+
+[colors.selection]
+text = "#24273a"
+background = "#f4dbd6"
+
+[colors.normal]
+black = "#494d64"
+red = "#ed8796"
+green = "#a6da95"
+yellow = "#eed49f"
+blue = "#8aadf4"
+magenta = "#f5bde6"
+cyan = "#8bd5ca"
+white = "#b8c0e0"
+
+[colors.bright]
+black = "#5b6078"
+red = "#ed8796"
+green = "#a6da95"
+yellow = "#eed49f"
+blue = "#8aadf4"
+magenta = "#f5bde6"
+cyan = "#8bd5ca"
+white = "#a5adcb"
+
+[colors.dim]
+black = "#494d64"
+red = "#ed8796"
+green = "#a6da95"
+yellow = "#eed49f"
+blue = "#8aadf4"
+magenta = "#f5bde6"
+cyan = "#8bd5ca"
+white = "#b8c0e0"
+
+[[colors.indexed_colors]]
+index = 16
+color = "#f5a97f"
+
+[[colors.indexed_colors]]
+index = 17
+color = "#f4dbd6"
 
