--- a/config/fastfetch/config.jsonc
+++ b/config/fastfetch/config.jsonc
@@ -13,7 +13,6 @@
     "modules": [
         "break",
         "break",
-        "break",
         {
             "type": "os",
             "key": "OS   ",
@@ -35,6 +34,11 @@
             "key": " └  ",
             "keyColor": "31",
         },
+        {
+            "type": "uptime",
+            "key": "🕑",
+            "keyColor": "31",
+        },
         "break",
         {
             "type": "host",
@@ -46,12 +50,6 @@
             "type": "cpu",
             "format": "{1} ({3}) @ {7} GHz",
             "key": " ├  ",
-            "keyColor": "33",
-        },
-        {
-            "type": "gpu",
-            "format": "{1} {2} @ {12} GHz",
-            "key": " ├ 󰢮 ",
             "keyColor": "33",
         },
         {
@@ -67,11 +65,6 @@
         {
             "type": "disk",
             "key": " ├ 󰋊 ",
-            "keyColor": "33",
-        },
-        {
-            "type": "monitor",
-            "key": " └  ",
             "keyColor": "33",
         },
         "break",
