--- a/config/fastfetch/config.jsonc
+++ b/config/fastfetch/config.jsonc
@@ -36,7 +36,7 @@
         },
         {
             "type": "uptime",
-            "key": "🕑",
+            "key": " ├ 🕑",
             "keyColor": "31",
         },
         "break",
