--- a/config/fastfetch/config.jsonc
+++ b/config/fastfetch/config.jsonc
@@ -18,7 +18,7 @@
         "break",
         {
             "type": "os",
-            "key": "OS",
+            "key": " os",
             "keyColor": "31", // = color1
         },
         {
