--- a/config/fastfetch/config.jsonc
+++ b/config/fastfetch/config.jsonc
@@ -1,36 +1,49 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "type": "small",
-        "padding": {
-            "top": 2
+        "source": "~/.config/fastfetch/arch",
+        "color": {
+            "1": "blue"
         }
     },
     "display": {
-        "separator": "",
-        "key": {
-            "width": 15
-        }
+        "separator": ""
     },
     "modules": [
-        "break",
-        "break",
+        {
+            "type": "custom",
+            "format": "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
+        },
         "break",
         {
             "type": "os",
-            "key": " os",
-            "keyColor": "31", // = color1
+            "key": " ",
+            "keyColor": "blue"
         },
         {
             "type": "kernel",
-            "key": " Kernel",
-            "keyColor": "31",
-            "format": "{2} {4}"
+            "key": " ",
+            "keyColor": "blue"
         },
         {
             "type": "packages",
-            "key": "󰏖 Packages",
-            "keyColor": "31",
+            "key": " ",
+            "keyColor": "blue"
+        },
+        {
+            "type": "wm",
+            "key": "  󰨇",
+            "keyColor": "blue"
+        },
+        {
+            "type": "terminal",
+            "key": "  ",
+            "keyColor": "blue"
+        },
+        {
+            "type": "shell",
+            "key": "  ",
+            "keyColor": "blue"
         },
         "break",
         {
